--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.1.0",
     "@testing-library/user-event": "^14.5.1",
+    "bootstrap": "^5.3.2",
     "crypto-browserify": "^3.12.0",
     "dotenv": "^16.3.1",
     "faunadb": "^4.8.0",
